--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', Arial, serif;
-    color: #000000;
+    color: rgb(0,0,0);
     font-size: 100%;
     line-height: 1.4;
     width: 100%;
@@ -15,7 +15,7 @@ body {
 }
 
 a{
-  color: #000000;
+  color: #fff;
 }
 body{
 	background: url('img/schlegeisspeicher.jpg') center center;
