--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a{
   color: #fff;
 }
 body{
-	background: url('img/schlegeisspeicher.jpg') center center;
+	background: url('img/karwendel-ahornboden.jpg') center center;
 	background-size: cover;
 }
 
